@@ -9,7 +9,6 @@ Open bugs:
 
 For the coming release:
 
-- avoid placing the controls view outside the screen area
 - for face list tiling, restore to originally given symmetry
 
 =====================================================
